# codex-vl

./: .gitattributes  CHANGELOG.md  LICENSE  MAINTAINER.md  NOTICE  README.md  SECURITY.md
.github/scripts/: install-musl-build-tools.sh
.github/workflows/: bazel.yml  ci.yml  package-linux-arm64.yml  package-linux-termux.yml  package-macos-candidate.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-ci.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  sdk.yml  study-fork-release-candidates.yml  v8-canary.yml
.release/: v0.132.0.md  v0.133.0.md
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py  install_native_deps.py  postinstall_darwin_build.js  prepare_local_vendor.py
codex-rs/: Cargo.toml  README.md
codex-rs/.cargo/: config.toml
codex-rs/app-server-daemon/: Cargo.toml  README.md
codex-rs/arg0/: Cargo.toml
codex-rs/bwrap/: build.rs
codex-rs/cli/: Cargo.toml  build.rs
codex-rs/vivling-core/: Cargo.toml
codex-rs/vivling-core/src/: lib.rs  paths.rs  redaction.rs  safety.rs
codex-rs/vivling-core/src/model/: constants.rs  expression.rs  gene.rs  language.rs  mod.rs  text_utils.rs  types.rs
codex-rs/vivling-memory-agent/: Cargo.toml
codex-rs/vivling-memory-agent/src/: lib.rs
docs/: install.md  release_playbook.md  vivipendium.md  vivling_model_catalog.md
patches/: v8_source_portability.patch
scripts/: fetch_rusty_v8_android.py  stage_npm_packages.py
test-report/: AI_GUIDED_TEST_SUITE.md  AUTOMATED_RUNTIME_TEMPLATE.md  MANUAL_UI_TEMPLATE.md  README.md
(+459 files in other folders)
