[package]
name = "codex-vivling-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_vivling_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
