[package]
name = "codex-vivling-memory-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_vivling_memory_agent"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
codex-vivling-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
